--- a/Ace/index.html
+++ b/Ace/index.html
@@ -12,6 +12,7 @@
     </style>             
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/CustomEase.min.js"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -47,7 +48,6 @@
             <p>news</p>
         </footer>
 
-
         <div class="header">
             <h1><span>Combat enemies</span></h1>
             <h1><span>in</span></h1>
@@ -67,6 +67,73 @@
                       ></path>
                     </svg>
             </button>
+        </div>
+    </div>
+
+    <div class="container-login">
+        <div class="form-box login">
+            <form action="">
+                <h1>Login</h1>
+                <div class="input-box">
+                    <input type="text" placeholder="Username" required>
+                    <i class='bx bxs-user'></i>
+                </div>
+                <div class="input-box">
+                    <input type="password" placeholder="Password" required>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                <div class="forgot-link">
+                <a href="#">Esqueceu a senha?</a>
+                </div>
+                <button type="submit" class="btn">Login</button>
+                <p>ou logue-se com</p>
+                <div class="social-icons">
+                    <a href="#"><i class='bx bxl-google-plus' ></i></a>
+                    <a href="#"><i class='bx bxl-facebook' ></i></a>
+                    <a href="#"><i class='bx bxl-github' ></i></a>
+                    <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                </div>
+            </form>
+        </div>
+        <div class="form-box register">
+            <form action="">
+                <h1>Cadastro</h1>
+                <div class="input-box">
+                    <input type="text" placeholder="Nome de usuário" required>
+                    <i class='bx bxs-user'></i>
+                </div>
+                <div class="input-box">
+                    <input type="email" placeholder="Email" required>
+                    <i class='bx bxs-envelope'></i>
+                </div>
+                <div class="input-box">
+                    <input type="password" placeholder="Senha" required>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                <div class="forgot-link">
+                <a href="#">Esqueceu a senha?</a>
+                </div>
+                <button type="submit" class="btn">Cadastrar</button>
+                <p>ou cadastre-se com</p>
+                <div class="social-icons">
+                    <a href="#"><i class='bx bxl-google-plus' ></i></a>
+                    <a href="#"><i class='bx bxl-facebook' ></i></a>
+                    <a href="#"><i class='bx bxl-github' ></i></a>
+                    <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                </div>
+            </form>
+        </div>
+        <div class="toggle-box">
+            <div class="toggle-painel toggle-left">
+                <h1>Olá, bem-vindo</h1>
+                <p>Não tem uma conta ainda?</p>
+                <button class="btn register-btn">Cadastrar</button>
+            </div>
+            <div class="toggle-painel toggle-right">
+                <h1>Bem-vindo de volta</h1>
+                <p>Já tem uma conta?</p>
+                <button class="btn login-btn">Login</button>
+            </div>
         </div>
     </div>
 
