--- a/Ace/index.html
+++ b/Ace/index.html
@@ -28,9 +28,11 @@
 
 
         <div class="video-container">
-            <video autoplay loop muted playsinline>
-            <source src="/video.mp4" type="video/mp4" />
+            <video autoplay loop muted playsinline disablePictureInPicture
+                controlsList="nodownload nofullscreen noplaybackrate">
+                <source src="/video.mp4" type="video/mp4" />
             </video>
+        
         </div>
 
 
