--- a/Ace/index.html
+++ b/Ace/index.html
@@ -77,11 +77,11 @@
             <form action="">
                 <h1>Login</h1>
                 <div class="input-box">
-                    <input type="text" placeholder="Username" required>
+                    <input type="text" placeholder="Nome de usuário" required>
                     <i class='bx bxs-user'></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" placeholder="Senha" required>
                     <i class='bx bxs-lock-alt'></i>
                 </div>
                 <div class="forgot-link">
@@ -109,7 +109,15 @@
                     <i class='bx bxs-envelope'></i>
                 </div>
                 <div class="input-box">
+                    <input type="text" placeholder="CPF" required>
+                    <i class='bx bx-body'></i>
+                </div>
+                <div class="input-box">
                     <input type="password" placeholder="Senha" required>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                <div class="input-box">
+                    <input type="password" placeholder="Confirme sua senha" required>
                     <i class='bx bxs-lock-alt'></i>
                 </div>
                 <div class="forgot-link">
