--- a/Ace/Profile/index.html
+++ b/Ace/Profile/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Mohammad Sahragard">
-    <title>Responsive Profile Page</title>
+    <title>Perfil do usuário</title>
     <script src="https://kit.fontawesome.com/b8b432d7d3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,6 +18,7 @@
                     <div class="profile-image"></div>
                     <div class="profile-names">
                         <h1 class="username">Rafael Sene</h1>
+                        <small class="page-title">(rsene)</small>
                     </div>
                 </div>
             </div>
